# gruper

./: .gitignore  CHANGELOG.md  DailyClaudeRoutineCheckup.md  Gruper.html  GruperDistributedROADMAP.md  GruperDistributedSpec.md  LICENSE  README.md  ROADMAP.md  UserManual.md  WeeklyClaudeRoutineCheckup.md
.github/workflows/: build-windows.yml  check.yml  orchestrator-tests.yml
agent-runtime/: .env.example  README.md  circuit_breaker.py  config.py  gruper-agent.service  main.py  offline_queue.py  ollama_client.py  requirements.txt  ws_client.py
agent-runtime/packaging/: gruper-agent.spec
console/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
console/src/: app.css  app.html
console/src-tauri/: Cargo.toml  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/icons/: icon.icns
console/src-tauri/src/: lib.rs  main.rs
console/src/lib/: agentDisplay.ts  roles.ts  taskDisplay.ts  types.ts  version.ts
console/src/lib/api/: client.ts
console/src/lib/components/: AddAgentDialog.svelte  AgentAnalytics.svelte  AgentAvatar.svelte  AgentCard.svelte  ConnectDialog.svelte  DebugPanel.svelte  ResultView.svelte  RoundTable.svelte  TaskComposer.svelte
console/src/lib/stores/: auth.ts  fleet.ts  logs.ts  orchestrator.ts  roundtable.ts  tasks.ts  wsStatus.ts
console/src/lib/ws/: console_ws.ts
console/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docs/: Debug-Logging.md  Phase2-gd-0.3-Plan.md  WP-06-Validation.md
orchestrator/: .env.example  Dockerfile  README.md  config.py  connection_manager.py  database.py  dispatcher.py  docker-compose.yml  main.py  pytest.ini  requirements.txt  security.py  structured_log.py
orchestrator/db/: __init__.py  base.py  connect.py  migrate.py  postgres.py  sqlite.py  util.py
orchestrator/migrations/: 004_events.sql
orchestrator/migrations/postgres/: 001_users.sql  002_agents.sql  003_tasks.sql  005_agent_soft_delete.sql
orchestrator/migrations/sqlite/: 001_users.sql  002_agents.sql  003_tasks.sql  004_events.sql  005_agent_soft_delete.sql
orchestrator/packaging/: entry.py  gruper-orchestrator.spec
orchestrator/routers/: agents.py  auth.py  health.py  tasks.py
orchestrator/tests/: conftest.py  test_agent_rename.py  test_heartbeat.py  test_lifecycle_cleanup.py  test_register.py  test_task_revoke.py  test_tasks.py
orchestrator/ws/: agent_ws.py  console_ws.py
scripts/: build-desktop.ps1  build-desktop.sh  validate-desktop-packaging.py
spec/contracts/: README.md  core-mapping.md  openapi.yaml  wss-messages.schema.json
spec/contracts/models/: agent.schema.json  event.schema.json  share-token.schema.json  task.schema.json  user.schema.json
tests/e2e/: mock_ollama.py  wp06_relay_validation.py
