[package]
name = "gruper-console"
version = "0.1.0"
edition = "2021"
description = "Gruper Distributed Manager Console"
license = "MIT"

# The Tauri app logic lives in a library crate (src/lib.rs) so it can be shared
# between the desktop binary (src/main.rs) and future mobile targets. The `_lib`
# suffix is required: without an explicit [lib] name the library would default to
# the package name `gruper_console`, which then collides with the binary of the
# same name on Windows (rust-lang/cargo#8519). The binary in src/main.rs calls
# `gruper_console_lib::run()`.
[lib]
name = "gruper_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
# WP-32: spawn and manage the bundled orchestrator as a sidecar process.
tauri-plugin-shell = "2"
# WP-32: only one Console instance manages a sidecar orchestrator at a time —
# a second launch forwards to the first instead of starting its own.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Desktop Hardening: sink-side secret redaction for the unified debug log
# (JWTs, ?token= URLs, Bearer headers, pubkeys) before an entry enters the
# in-memory ring buffer — defense in depth with the Python emit-site redaction.
regex = "1"
# WP-32: async TCP + timers for the sidecar health check (see check_health in
# lib.rs) — tauri's own async runtime already drives execution, so no "rt"
# feature is needed. "macros" is required for tokio::select!/tokio::pin!,
# used by spawn_local_agent's early-crash grace-period check.
tokio = { version = "1", features = ["net", "io-util", "time", "macros"] }

[dev-dependencies]
# "rt" (a real runtime, only needed to actually execute async tests) is kept
# out of [dependencies] above so it isn't linked into the shipped binary —
# dev-dependencies only apply when building tests, not `cargo build`/release.
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
